--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ justify-content: flex-end;}
 .main{
     padding: 15px;
     background: linear-gradient( rgb(46, 45, 45) 0%, #000000 100%); 
-    display: flex; height: 70vh; align-items: center; justify-content: center;
+    display: flex; 
+    height:450px; align-items: center; justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -68,9 +69,9 @@ color: white;
 }
 
 footer {
-    margin-top:7vh;
+    margin-top:30px;
     background-color: rgb(36, 35, 35); /* Old browsers */
-    height: 10vh;
+    height: 80px;
     text-align: center;
     margin: px;
     color: white;
